--- a/coed-profile.html
+++ b/coed-profile.html
@@ -81,7 +81,7 @@
         <div class="thumbnail">
           <img src="images/allie.jpeg" alt="Lights" style="width:80%">
           <div class="caption">
-            <p class="text-center">Allie| Midfielder| Forward 🇺🇸</p>
+            <p class="text-center">Allie|Midfielder|Forward 🇺🇸</p>
             <p class="text-center">Marietta</p>
           </div>
           </a>
@@ -91,7 +91,7 @@
         <div class="thumbnail">
           <img src="images/Cory.jpeg" alt="Nature" style="width:95%">
           <div class="caption">
-            <p>Cory | Midfielder | Marietta |🇺🇸</p>
+            <p>Cory|Midfielder|Marietta|🇺🇸</p>
           </div>
           </a>
         </div>
@@ -100,8 +100,20 @@
         <div class="thumbnail">
           <img src="images/cristian.jpeg" alt="Fjords" style="width:100%">
           <div class="caption">
-            <p>Cristian | Midfielder | 🇲🇽🇺🇸</p>
-            <p>Marietta | Wolf</p>
+            <p>Cristian|Midfielder|🇲🇽🇺🇸</p>
+            <p>Marietta|Wolf</p>
+
+          </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="https://icons-for-free.com/iconfiles/png/512/guy+man+user+icon-1320166689116245256.png" alt="Fjords"
+            style="width:80%">
+          <div class="caption">
+            <p>Christian|Midfielder|🇲🇽🇺🇸</p>
+            <p>Marietta|Wolf</p>
 
           </div>
           </a>
@@ -111,8 +123,8 @@
         <div class="thumbnail">
           <img src="images/denny.jpeg" alt="Fjords" style="width:65%">
           <div class="caption">
-            <p>Denny | Forward | 🇧🇬🇺🇸</p>
-            <p>Marietta | Wolf</p>
+            <p>Denny|Forward|🇧🇬🇺🇸</p>
+            <p>Marietta|Wolf</p>
           </div>
           </a>
         </div>
@@ -122,7 +134,7 @@
           <div class="thumbnail">
             <img src="images/gerard.jpeg" alt="Fjords" style="width:100%">
             <div class="caption">
-              <p>Gerard | Midfielder | 🇹🇬🇺🇸</p>
+              <p>Gerard|Midfielder|🇹🇬🇺🇸</p>
               <p>Wolf</p>
             </div>
             </a>
@@ -134,7 +146,7 @@
           <div class="thumbnail">
             <img src="images/heitor.jpeg" alt="Fjords" style="width:80%">
             <div class="caption">
-              <p>Heitor | Midfielder | 🇧🇷 🇺🇸</p>
+              <p>Heitor|Midfielder|🇧🇷🇺🇸</p>
               <p>Wolf</p>
             </div>
             </a>
@@ -146,7 +158,7 @@
           <div class="thumbnail">
             <img src="images/hussein.jpeg" alt="Fjords" style="width:70%">
             <div class="caption">
-              <p>Hussein | Goalkeeper | 🇪🇬 🇺🇸</p>
+              <p>Hussein|Goalkeeper| 🇪🇬 🇺🇸</p>
               <p>Marietta| Wolf</p>
             </div>
             </a>
@@ -158,7 +170,7 @@
           <div class="thumbnail">
             <img src="images/katie.jpeg" alt="Fjords" style="width:85%">
             <div class="caption">
-              <p>Katie | Midfielder | 🇺🇸</p>
+              <p>Katie|Midfielder|🇺🇸</p>
               <p>Marietta</p>
             </div>
             </a>
@@ -171,7 +183,7 @@
           <div class="thumbnail">
             <img src="images/rodney.jpeg" alt="Fjords" style="width:80%">
             <div class="caption">
-              <p>Rodney | Defender | 🇬🇭🇺🇸</p>
+              <p>Rodney|Defender|🇬🇭🇺🇸</p>
               <p>Marietta| Wolf</p>
             </div>
             </a>
@@ -183,7 +195,7 @@
           <div class="thumbnail">
             <img src="images/souley.jpeg" alt="Fjords" style="width:60%">
             <div class="caption">
-              <p>Souley | Midfielder |🇬🇳🇺🇸</p>
+              <p>Souley|Midfielder|🇬🇳🇺🇸</p>
               <p>Wolf</p>
             </div>
             </a>
@@ -195,7 +207,31 @@
           <div class="thumbnail">
             <img src="images/moussa.jpeg" alt="Fjords" style="width:85%">
             <div class="caption">
-              <p>Moussa | Forward | 🇱🇧🇺🇸</p>
+              <p>Moussa|Forward|🇱🇧🇺🇸</p>
+              <p>Marietta| Wolf</p>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <div class="thumbnail">
+            <img src="https://image.flaticon.com/icons/png/512/219/219969.png" alt="Fjords" style="width:75%">
+            <div class="caption">
+              <p>Jenny|Defender|🇲🇽🇺🇸</p>
+              <p>Marietta| Wolf</p>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <div class="thumbnail">
+            <img src="https://image.flaticon.com/icons/png/512/219/219969.png" alt="Fjords" style="width:75%">
+            <div class="caption">
+              <p>Clara|Forward|🇲🇽🇺🇸</p>
               <p>Marietta| Wolf</p>
             </div>
             </a>
@@ -207,7 +243,7 @@
           <div class="thumbnail">
             <img src="images/vicky.jpeg" alt="Fjords" style="width:65%">
             <div class="caption">
-              <p>Vicky| Forward | 🇧🇬🇺🇸</p>
+              <p>Vicky|Forward|🇧🇬🇺🇸</p>
               <p>Wolf</p>
             </div>
             </a>
@@ -219,7 +255,7 @@
           <div class="thumbnail">
             <img src="images/zack.jpeg" alt="Fjords" style="width:71%">
             <div class="caption">
-              <p>Zack | Goalkeeper | 🇺🇸</p>
+              <p>Zack|Goalkeeper|🇺🇸</p>
               <p>Marietta| Wolf</p>
 
             </div>
