--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           Indoor and outdoor league. We have Men, Women and Coed teams playing respectively in different leagues.</p>
       </div>
       <div class="col-lg-6 a">
-        <img src="images/ball.jpeg" width="350px" />
+        <img src="images/football.jpg" width="350px" />
         “When you win, you don’t get carried away. But if you go step by step, with confidence, you can go far."
         <h4>Diego Maradona<h4>
       </div>
