--- a/men-profile.html
+++ b/men-profile.html
@@ -80,7 +80,7 @@
         <div class="thumbnail">
           <img src="images/Cory.jpeg" alt="Lights" style="width:80%">
           <div class="caption">
-            <p class="text-center">Cory| Midfielder| 🇺🇸</p>
+            <p class="text-center">Cory|Midfielder|🇺🇸</p>
             <p class="text-center">Marietta| Wolf</p>
           </div>
           </a>
@@ -90,7 +90,7 @@
         <div class="thumbnail">
           <img src="images/gerard.jpeg" alt="Nature" style="width:100%">
           <div class="caption">
-            <p>Gerard | Midfielder | 🇹🇬 🇺🇸</p>
+            <p>Gerard|Midfielder|🇹🇬🇺🇸</p>
             <p>Marietta| Wolf</p>
 
           </div>
@@ -101,7 +101,7 @@
         <div class="thumbnail">
           <img src="images/heitor.jpeg" alt="Fjords" style="width:80%">
           <div class="caption">
-            <p>Heitor | Midfielder | 🇧🇷 🇺🇸</p>
+            <p>Heitor|Midfielder|🇧🇷🇺🇸</p>
             <p>Marietta</p>
 
           </div>
@@ -112,7 +112,7 @@
         <div class="thumbnail">
           <img src="images/hussein.jpeg" alt="Fjords" style="width:80%">
           <div class="caption">
-            <p>Hussein | Goalkeeper | 🇪🇬 🇺🇸</p>
+            <p>Hussein|Goalkeeper|🇪🇬🇺🇸</p>
             <p>Marietta| Wolf</p>
           </div>
           </a>
@@ -123,7 +123,7 @@
           <div class="thumbnail">
             <img src="images/justin.jpeg" alt="Fjords" style="width:80%">
             <div class="caption">
-              <p>Justin | Defender | 🇺🇸</p>
+              <p>Justin|Defender|🇺🇸</p>
               <p>Marietta</p>
             </div>
             </a>
@@ -135,7 +135,7 @@
           <div class="thumbnail">
             <img src="images/moussa.jpeg" alt="Fjords" style="width:80%">
             <div class="caption">
-              <p>Moussa | Forward | 🇱🇧 🇺🇸</p>
+              <p>Moussa|Forward|🇱🇧🇺🇸</p>
               <p>Marietta| Wolf</p>
             </div>
             </a>
@@ -147,7 +147,7 @@
           <div class="thumbnail">
             <img src="images/rodney.jpeg" alt="Fjords" style="width:90%">
             <div class="caption">
-              <p>Rodney | Defender | 🇬🇭 🇺🇸</p>
+              <p>Rodney|Defender|🇬🇭🇺🇸</p>
               <p>Marietta| Wolf</p>
 
             </div>
@@ -160,7 +160,7 @@
           <div class="thumbnail">
             <img src="images/trevor.jpeg" alt="Fjords" style="width:95%">
             <div class="caption">
-              <p>Trevor | Forward | 🇺🇸</p>
+              <p>Trevor|Forward|🇺🇸</p>
               <p>Marietta| Wolf</p>
 
             </div>
@@ -173,7 +173,7 @@
           <div class="thumbnail">
             <img src="images/zack.jpeg" alt="Fjords" style="width:71%">
             <div class="caption">
-              <p>Zack | Goalkeeper | 🇺🇸</p>
+              <p>Zack|Goalkeeper|🇺🇸</p>
               <p>Marietta| Wolf</p>
 
             </div>
@@ -184,10 +184,10 @@
       <div class="col-md-4">
         <div class="thumbnail">
           <div class="thumbnail">
-            <img src="https://a3.espncdn.com/combiner/i?img=%2Fphoto%2F2018%2F0702%2Fr395310_1296x729_16%2D9.jpg"
+            <img src="https://icons-for-free.com/iconfiles/png/512/guy+man+user+icon-1320166689116245256.png"
               alt="Fjords" style="width:71%">
             <div class="caption">
-              <p>Christian | Defender | 🇲🇽🇺🇸</p>
+              <p>Christian|Defender|🇲🇽🇺🇸</p>
               <p>Marietta| Wolf</p>
             </div>
             </a>
