--- a/men.html
+++ b/men.html
@@ -59,7 +59,7 @@
               Profiles
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="men-profile.htm">Men</a>
+              <a class="dropdown-item" href="men-profile.html">Men</a>
               <a class="dropdown-item" href="blog-post.html">Coed</a>
               <a class="dropdown-item" href="women-profile.html">Women</a>
             </div>
@@ -127,8 +127,8 @@
           <p>EMOJIS 9 vs CHUCTEROS 3 </p>
         </div>
         <span class="badge badge-pill badge-secondary">Wednesday January 22th 2020</span>
-        <div class="alert alert-su" role="alert">
-          <p>EMOJIS 11 vs MOTHER LOVERS 2 </p>
+        <div class="alert alert-success" role="alert">
+          <p>EMOJIS 11 vs MOTHER LOVERS 1 </p>
         </div>
         <span class="badge badge-pill badge-secondary">Wednesday January 29th 2020</span>
         <div class="alert alert-dark" role="alert">
