--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="contact">Contact Us</h1>
     <p>Are You Interested playing for Emojis Or Sponsor This Team? Don't Hesitate to contact us!</p>
-    <p>We're also looking for Sponsors? Please Get In Touch With Us if interested!</p>
+    <p>We're also looking for Sponsors? Please Get In Touch With Us if Interested To Help!</p>
 
 
     <!-- Content Row -->
@@ -85,8 +85,9 @@
       <!-- Map Column -->
       <div class="col-lg-8 mb-4">
         <!-- Embedded Google Map -->
-        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-          src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+        <!-- <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+          src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe> -->
+        <img src="images/mail.jpeg" width="100%" alt="mail" />
       </div>
       <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
