--- a/men.html
+++ b/men.html
@@ -193,8 +193,11 @@
             </tr>
           </tbody>
         </table>
-        <h2>GAME HIGHLIGHT OF THE WEEK</h2>
-        <h3>COMING SOON...</h3>
+        <h2>GAME HIGHLIGHT</h2>
+        <button class="btn btn-primary">
+          <span class="spinner-border spinner-border-md"></span>
+          COMING SOON...
+        </button>
         <!-- <div class="embed-responsive embed-responsive-16by9">
 
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v=291v2KT63GQ"
@@ -324,12 +327,15 @@
             </tr>
           </tbody>
         </table>
-        <h2>GAME HIGHLIGHT OF THE WEEK</h2>
         <!-- <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v64KOxKVLVg"
             allowfullscreen></iframe>
         </div> -->
-        COMING SOON...
+        <h2>GAME HIGHLIGHT</h2>
+        <button class="btn btn-primary">
+          <span class="spinner-border spinner-border-md"></span>
+          COMING SOON...
+        </button>
       </div>
     </div>
   </div>
@@ -340,9 +346,9 @@
     <div class="container">
       <p class="m-0 text-center text-white">Copyright ©
         <script>document.write(new Date().getFullYear())</script> EMOJIS|
-        <a href="#" class="fa fa-facebook" style="font-size:40px;color:white"></a>
+        <a href="#" class="fa fa-facebook" style="font-size:30px;color:white"></a>
         <a href="https://www.instagram.com/emojisfc/" target="_blank" class="fa fa-instagram"
-          style="font-size:40px;color:white"></a>
+          style="font-size:30px;color:white"></a>
       </p>
     </div>
     <!-- /.container -->
