--- a/coed-profile.html
+++ b/coed-profile.html
@@ -81,7 +81,7 @@
         <div class="thumbnail">
           <img src="images/allie.jpeg" alt="Lights" style="width:80%">
           <div class="caption">
-            <p class="text-center">Allie|Midfielder|Forward 🇺🇸</p>
+            <p class="text-center">Allie|Midfielder|Forward|🇺🇸</p>
             <p class="text-center">Marietta</p>
           </div>
           </a>
@@ -273,9 +273,9 @@
     <div class="container">
       <p class="m-0 text-center text-white">Copyright ©
         <script>document.write(new Date().getFullYear())</script> EMOJIS|
-        <a href="#" class="fa fa-facebook" style="font-size:40px;color:white"></a>
+        <a href="#" class="fa fa-facebook" style="font-size:30px;color:white"></a>
         <a href="https://www.instagram.com/emojisfc/" target="_blank" class="fa fa-instagram"
-          style="font-size:40px;color:white"></a>
+          style="font-size:30px;color:white"></a>
       </p>
     </div>
     <!-- /.container -->
