--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
         </p>
         <p>
           <abbr title="Email">E</abbr>:
-          <a href="mailto:name@example.com">name@example.com
+          <a href="mailto:name@example.com">emojis_official@gmail.com
           </a>
         </p>
       </div>
@@ -162,9 +162,9 @@
     <div class="container">
       <p class="m-0 text-center text-white">Copyright ©
         <script>document.write(new Date().getFullYear())</script> EMOJIS|
-        <a href="#" class="fa fa-facebook" style="font-size:40px;color:white"></a>
+        <a href="#" class="fa fa-facebook" style="font-size:30px;color:white"></a>
         <a href="https://www.instagram.com/emojisfc/" target="_blank" class="fa fa-instagram"
-          style="font-size:40px;color:white"></a>
+          style="font-size:30px;color:white"></a>
       </p>
     </div>
     <!-- /.container -->
