--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="contact">Contact Us</h1>
-    <p>Are You Interested playing for Emojis Or Sponsor This Team? Don't Hesitate to contact us!</p>
+    <p>Are You Interested playing for Emojis? Contact Us Fpr Tryouts!</p>
     <p>We're also looking for Sponsors? Please Get In Touch With Us if Interested To Help!</p>
 
 
