--- a/coed-profile.html
+++ b/coed-profile.html
@@ -231,7 +231,7 @@
           <div class="thumbnail">
             <img src="https://image.flaticon.com/icons/png/512/219/219969.png" alt="Fjords" style="width:75%">
             <div class="caption">
-              <p>Clara|Forward|🇲🇽🇺🇸</p>
+              <p>Joanna|Forward|🇲🇽🇺🇸</p>
               <p>Marietta| Wolf</p>
             </div>
             </a>
