--- a/coed.html
+++ b/coed.html
@@ -228,7 +228,7 @@
         </div>
         <span class="badge badge-pill badge-secondary">Thursday, January 23 2020</span>
         <div class="alert alert-dark" role="alert">
-          <p>FFC GA vs. EMOJIS | 9:20 PM </p>
+          <p>FFC GA 6 vs. EMOJIS 10 | 9:20 PM </p>
         </div>
         <span class="badge badge-pill badge-secondary">Thursday, January 30th 2020</span>
         <div class="alert alert-dark" role="alert">
