--- a/coed.html
+++ b/coed.html
@@ -227,7 +227,7 @@
           <p>EMOJIS 6 JOSE + 5 4</p>
         </div>
         <span class="badge badge-pill badge-secondary">Thursday, January 23 2020</span>
-        <div class="alert alert-dark" role="alert">
+        <div class="alert alert-success" role="alert">
           <p>FFC GA 6 vs. EMOJIS 10 | 9:20 PM </p>
         </div>
         <span class="badge badge-pill badge-secondary">Thursday, January 30th 2020</span>
