--- a/coed-profile.html
+++ b/coed-profile.html
@@ -76,13 +76,13 @@
   <p class="player">GET TO KNOW OUR COED PLAYERS</p>
   <p class="player">MARIETTA && WOLF INDOOR</p>
   <div class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col-md-4">
         <div class="thumbnail">
           <img src="images/allie.jpeg" alt="Lights" style="width:80%">
           <div class="caption">
-            <p class="text-center">Allie|Midfielder|Forward|🇺🇸</p>
-            <p class="text-center">Marietta</p>
+            <p>Allie|Midfielder|Forward|🇺🇸</p>
+            <p>Marietta</p>
           </div>
           </a>
         </div>
@@ -244,6 +244,18 @@
             <img src="images/vicky.jpeg" alt="Fjords" style="width:65%">
             <div class="caption">
               <p>Vicky|Forward|🇧🇬🇺🇸</p>
+              <p>Wolf</p>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <div class="thumbnail">
+            <img src="images/whitney.jpeg" alt="Fjords" style="width:60%">
+            <div class="caption">
+              <p>Whitney|Defender🇧🇬🇺🇸</p>
               <p>Wolf</p>
             </div>
             </a>
