--- a/men-profile.html
+++ b/men-profile.html
@@ -75,13 +75,23 @@
   <p class="player">GET TO KNOW OUR MEN PLAYERS</p>
   <p class="player">MARIETTA && WOLF INDOOR</p>
   <div class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col-md-4">
         <div class="thumbnail">
           <img src="images/Cory.jpeg" alt="Lights" style="width:80%">
           <div class="caption">
             <p class="text-center">Cory|Midfielder|🇺🇸</p>
             <p class="text-center">Marietta| Wolf</p>
+          </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="images/cristian.jpeg" alt="Lights" style="width:80%">
+          <div class="caption">
+            <p class="text-center">Cristian|Midfielder|🇲🇽🇺🇸</p>
+            <p class="text-center">Wolf</p>
           </div>
           </a>
         </div>
